[project]
name = "qiskit_to_quantikz_cezaris13"
version = "0.0.5"
authors = [
  { name="Pijus PetkeviÄius", email="pijus.petkevicius314@gmail.com" },
]
description = "A Python tool to convert Qiskit circuits to quantikz LaTeX code for visualization."
readme = { file = "README.org", content-type = "text/plain" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "qiskit>=1.1.4"
]

[project.urls]
Homepage = "https://github.com/cezaris13/Qiskit-to-quantikz"
Issues = "https://github.com/cezaris13/Qiskit-to-quantikz/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
